@@ -38,6 +38,8 @@ misc improvements
 	-reusable TMs (Lunos)
  	-forgettable HMs (Lunos, thespbgamer, Jaizu)
 	-more bonus premier balls, like in LGPE (BuffelSalt)
+	-improved opponent's pokeball throwing animation (seketsu)
+	-trainer classes now use different kinds of pokeballs (BuffelSalt)
 	-slight adjustment to Brendan's script for when you first meet him
 	-tweaked saving text to make sense on both real hardware and emulators
 	-name rater can change the names of non-OT pokemon
